[package]
name = "ransel"
version = "0.1.8"
description = "a library for rank/select succinct data structures"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/drtconway/ransel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitintr = "0.3.0"
num-traits = "0.2.16"
flate2 = "1.0.26"
